--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-svg": "^16.1.7",
     "react-tooltip": "^5.11.1",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.5.0",
     "sass": "^1.62.0"
   },
   "devDependencies": {
