--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "tsc --noEmit && next lint"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "next": "13.3.0",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "@types/react-tooltip": "^4.2.4",
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
