--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,16 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@api/*": ["./src/api/*"],
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@styles/*": ["./src/styles/*"],
+      "@tables/*": ["./src/tables/*"],
+      "@typings/*": ["./src/typings/*"],
+      "@ui/*": ["./src/ui/*"],
+      "@views/*": ["./src/views/*"]
     },
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
