--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "tsc --noEmit && next lint"
   },
   "dependencies": {
+    "@types/react-cytoscapejs": "^1.2.2",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "18.2.0",
     "react-popper": "^2.3.0",
     "react-svg": "^16.1.7",
