--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "18.2.0",
+    "react-force-graph-3d": "^1.22.2",
     "react-popper": "^2.3.0",
     "react-svg": "^16.1.7",
     "react-tooltip": "^5.11.1",
