--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.0.11",
     "@types/react-tooltip": "^4.2.4",
     "@types/react-transition-group": "^4.4.5",
+    "@types/three": "^0.150.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "8.38.0",
