--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "tsc --noEmit && next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-cytoscapejs": "^1.2.2",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "next": "13.3.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-force-graph-3d": "^1.22.2",
     "react-popper": "^2.3.0",
+    "react-redux": "^8.0.5",
     "react-svg": "^16.1.7",
     "react-tooltip": "^5.11.1",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.5.0",
+    "redux-saga": "^1.2.3",
     "sass": "^1.62.0"
   },
   "devDependencies": {
