--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@api/*": ["./src/api/*"],
       "@components/*": ["./src/components/*"],
       "@pages/*": ["./src/pages/*"],
+      "@store/*": ["./src/store/*"],
       "@styles/*": ["./src/styles/*"],
       "@tables/*": ["./src/tables/*"],
       "@typings/*": ["./src/typings/*"],
